<resources>
    <string name="app_name">RDMNS.LK (REDESIGNED) </string>
    <string name="menu_description">දුම්රිය මගීන්ගේ නිල සමුහය</string>
    <string name="menu_description2">Official Network of Railway Passengers</string>
    <string name="menu_description3">www.RDMNS.LK</string>
    <string name="button_text">Submit News</string>
    <string name="image_description">Test Content Description</string>
    <!-- Menu Strings of Lahiru -->
    <string name="menuName3">&#160;Contact Railway Security</string>
    <string name="menuName4">&#160;Submit Complaints</string>
    <string name="menuName5">&#160;About Us</string>


    <!-- Submit Complaints Strings -->
    <string name="txtViewEmail">Your Email : </string>
    <string name="txtSubject">Subject : </string>
    <string name="txtComplaint">Complaint : </string>
    <string name="txtDescription">Description : </string>
    <string name="titleSubmitNews">Submit News</string>
    <string name="titleLiveUpdates">Live Updates and Notifications</string>
    <string name="btnImage">Image</string>
    <string name="btnSubmit">Submit</string>

    <string name="title_activity_anout__us">About_Us</string>
    <string name="tab_main">Main</string>
    <string name="tab_coastal">Coastal</string>
    <string name="tab_kv">KV</string>
    <string name="tab_pt">PT</string>
    <string name="tab_other">Other</string>
    <string name="title_activity_about__us">About_Us</string>
    <string name="title_activity_train_schedule">TrainSchedule</string>
    <string name="Train_Schecule">Train Schedule</string>
    <string name="main_news_feed">Main News Feed</string>
    <string name="noofflineNotification">අන්තර්ජාලය නොමැතිව ක්‍රියාත්මක වන මෙම විශේෂ දුම්රිය කාලසටහන තවම පරික්ෂණ අදීරයේ පවතින අතර නොබෝ දිනකින් මෙම සෙවාව ඔබට ලබා ගත හැකි වනු ඇත.</string>
    <string name="contact_admin">Contact - admin@rdmns.lk</string>
    <string name="lost_and_found">Lost And Found</string>
    <string name="hintSubject">Enter News Subject</string>
    <string name="hintDescription">Enter News Description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_live_updates_and_notifications">
        LiveUpdatesAndNotificationsActivity
    </string>
    <string name="title_activity_new_live_updates_and_notifications">
        NewLiveUpdatesAndNotificationsActivity
    </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Back to Menu</string>

    <string name="menu_home">Main Line</string>
    <string name="menu_gallery">Coastal Line</string>
    <string name="menu_slideshow">Kelani Valey Line</string>
    <string name="menu_other_new">Puttalam Line</string>
    <string name="menu_other">Other Lines</string>
    <string name="menu_submit_news">&#160;Submit News\n&#160;පුවත් අපවෙත එවන්න</string>
    <string name="menu_live_updates">&#160;Live Updates and Notifications\n&#160;සජීවී දුම්රිය ප්‍රමාදයන් සහ හදිසි දැනුම්දීම්</string>
    <string name="menu_main_news_feed">&#160;Main News Feed\n&#160;ප්‍රධාන පුවත්</string>
    <string name="menu_timetable">&#160;Train Schedule\n&#160;දුම්රිය කාලසටහන</string>
    <string name="menu_lost_found">&#160;Lost And Found Items\n&#160;අතපසු වූ / හමුවූ බඩුබාහිරාදිය\n&#160;පිළිබද තොරතුරු</string>
    <string name="menu_contact_security">&#160;Contact Railway Security\n&#160;දුම්රිය ආරක්‍ෂක අංශය වෙත සම්බන්ධ වන්න</string>
    <string name="menu_submit_complaints">&#160;Submit Passenger Complaints\n&#160;දුම්රිය සම්බන්ධ මගී පැමිණිලි\n&#160;ඉදිරිපත් කිරීම</string>
    <string name="menu_about_us">&#160;About Us\n&#160;අප ගැන</string>
    <string name="menu_contact_stations">Contact No. of Railway Stations\nදුම්රිය ස්ථානයන්හි දුරකථන අංක නාමාවලිය</string>
    <string name="station_information">Railway Station Infromation</string>
    <string name="titleContactStations">Contact Railway Stations</string>

    <string name="text1">ප්‍ර්‍රවේශ පත්‍ර මිළ ගණන්</string>
    <string name="text2">කොළඹ කොටුව දුම්රිය ස්ථානයේ සිට</string>

    <string name="firstClassSinhala">පළමු පන්තිය</string>
    <string name="secondClassSinhala">දෙවන පන්තිය</string>
    <string name="thirdClassSinhala">සකසුරුවම් පන්තිය</string>

    <string name="firstClass">First Class</string>
    <string name="secondClass">Second Class</string>
    <string name="thirdClass">Economic Class</string>

    <string name="instruction1">දුම්රිය තුල හා දුම්රිය  පරිශ්‍රයන් තුල දී නැතිවන සහ හමුවන අයිතමයන් පිලිබදව දැනුවත් කිරීමේ පද්දතිය </string>
    <string name="instruction2">දඋපදෙස්  </string>
    <string name="instruction3">හමුවූ යමක් පිලිබදව තොරතුරු ලබාදීමට, ඔබට දුම්රිය තුල හෝ ඒ  අවට දී දුම්රිය මගියෙකුට අයත් යමක් හමුවුවහොත් :</string>
    <string name="instruction4">1) එය ලගම පිහිටි දුම්රිය සටනය වෙත බාරදෙන්න </string>
    <string name="instruction5">2)Found Item යටතේ එම අයිතමය හමුවූ දිනය, වෙලාව, ස්ථානය ආදී තොරතුරු අප වෙත එවන්න</string>
    <string name="instruction6">3) තොරතුරු  එවීමෙදි අයිතමය ව්‍යාජ පුද්ගලයෙකුගේ අතට පත්වීමට ඇති අවස්ථාව අවම වන ලෙස තොරතුරු සපයන්න, අනන්‍යතාව තහවුරු කර ගත හැකි තොරතුරු ලබදිමෙන් වලකින්න</string>

    <string name="instruction7">දුම්රිය තුල හෝ ඒ  අවට දී නැතිවූ යමක් පිලිබදව තොරතුරු ලබාදීමට,</string>
    <string name="instruction8">1)Lost Items යටතේ එම අයිතමය නැතිවූ දිනය, වෙලාව, ස්ථානය ආදී තොරතුරු අප වෙත එවන්න</string>
    <string name="instruction9">2) තොරතුරු  එවීමෙදි අයිතමය ව්‍යාජ පුද්ගලයෙකුගේ අතට පත්වීමට ඇති අවස්ථාව අවම වන ලෙස තොරතුරු සපයන්න, අනන්‍යතාව තහවුරු කර ගත හැකි තොරතුරු ලබදිමෙන් වලකින්න</string>
</resources>