<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="67dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="134dp"
        android:layout_marginBottom="18dp"
        android:text="@string/menu_description"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <ScrollView
            android:layout_width="348dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:textAlignment="textEnd">

                <Button
                    android:id="@+id/main_news_feed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/menu_buttons"
                    android:drawableEnd="@drawable/ic_icons8_news"
                    android:text="@string/main_news_feed"
                    android:textAlignment="textStart"
                    android:textColor="#FFFFFF" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="14dp" />

                <Button
                    android:id="@+id/live_updates"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/menu_buttons"
                    android:drawableEnd="@drawable/ic_baseline_notifications_active_24"
                    android:text="@string/titleLiveUpdates"
                    android:textAlignment="textStart"
                    android:textColor="#FFFFFF" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="14dp" />

                <Button
                    android:id="@+id/submit_news"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/menu_buttons"
                    android:drawableEnd="@drawable/ic_baseline_mail_outline_24"
                    android:text="@string/titleSubmitNews"
                    android:textAlignment="textStart"
                    android:textColor="#FFFFFF" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="14dp" />

                <Button
                    android:id="@+id/trainSchedules"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/menu_buttons"
                    android:drawableEnd="@drawable/ic_baseline_train_24"
                    android:text="@string/Train_Schecule"
                    android:textAlignment="textStart"
                    android:textColor="#FFFFFF" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="14dp" />

                <Button
                    android:id="@+id/btnLostFound"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/menu_buttons"
                    android:drawableEnd="@drawable/ic_baseline_search_24"
                    android:text="@string/lost_and_found"
                    android:textAlignment="textStart"
                    android:textColor="#FFFFFF" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="14dp" />

                <Button
                    android:id="@+id/btnSecurity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/menu_buttons"
                    android:drawableEnd="@drawable/ic_baseline_call_24"
                    android:text="@string/menuName3"
                    android:textAlignment="textStart"
                    android:textColor="#FFFFFF" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="14dp" />

                <Button
                    android:id="@+id/btnComplaints"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/menu_buttons"
                    android:drawableEnd="@drawable/ic_baseline_assignment_24"
                    android:text="@string/menuName4"
                    android:textAlignment="textStart"
                    android:textColor="#FFFFFF" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="14dp" />

                <Button
                    android:id="@+id/btnAboutUs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/menu_buttons"
                    android:drawableEnd="@drawable/ic_baseline_person_24"
                    android:text="@string/menuName5"
                    android:textAlignment="textStart"
                    android:textColor="#FFFFFF" />
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="38dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>